charon/tests/ui/simple/fewer-clauses-in-method-impl.out
error: Found inconsistent generics after transformations:
       Mismatched builtin trait parent clauses:
       target: Clone
       expected: [[@TraitClause0]: Sized<missing(@TypeBound(1, 0))>]
            got: [MetaSized<()>, Clone<()>]
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::vector::Vector<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::expressions::FnPtr
         charon_lib::ast::gast::FnOperand
         charon_lib::ast::gast::Call
         charon_lib::ast::llbc_ast::StatementKind
         charon_lib::ast::llbc_ast::Statement
         alloc::vec::Vec<charon_lib::ast::llbc_ast::Statement>
         charon_lib::ast::llbc_ast::Block
         charon_lib::ast::gast::GExprBody<charon_lib::ast::llbc_ast::Block>
         charon_lib::ast::gast::Body
         core::result::Result<charon_lib::ast::gast::Body, charon_lib::ast::gast::Opaque>
         charon_lib::ast::gast::FunDecl
       Binding stack (depth 1):
         0: 
  --> tests/ui/simple/fewer-clauses-in-method-impl.rs:12:5
   |
12 |     <() as Trait>::method::<()>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (1 errors)
